worked around ng-zorro form layout bug w/ nested forms

--- a/client/src/app/forms2/wrappers/form-field/form-field.wrapper.less
+++ b/client/src/app/forms2/wrappers/form-field/form-field.wrapper.less
@@ -9,10 +9,22 @@
 
 .layout-horizontal ::ng-deep nz-form-item:first-of-type {
   flex-direction: inherit;
+  nz-form-label {
+    text-align: right;
+    line-height: 28px;
+    white-space: inherit;
+    padding: inherit;
+  }
 }
 
 .layout-inline ::ng-deep nz-form-item:first-of-type {
   flex-direction: inherit;
+  nz-form-label {
+    height: 28px;
+    line-height: 28px;
+    white-space: inherit;
+    padding: inherit;
+  }
 }
 .cvc-field-label() {
   label {
